--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="86dp"
         android:text="Logout" />
 
     <Button
@@ -35,5 +35,16 @@
         android:layout_marginTop="179dp"
         android:textSize="28sp"
         android:text="SEND REQUEST" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:itemBackground="@color/colorPrimaryDark"
+        app:itemIconTint="@color/menustatecolor"
+        app:itemTextColor="@color/menustatecolor"
+        app:menu="@menu/botton_navigation_main">
+    </android.support.design.widget.BottomNavigationView>
 
 </RelativeLayout>
